# MicroscopyNodes

./: 404.html  README.md  build.py  clean_svg.py  index.html  mkdocs.yml  mkdocs_macros.py  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: faq.md  index.md  overview.md
docs/javascript/: lazy_yt.js
docs/stylesheets/: extra_css.css
docs/tutorials/: 1_start.md  2_loading_data.md  3_objects.md  4_shading.md  5_creating_ouput.md  large_data.md  ome_zarr_troubleshooting.md  preferences.md  rendering.md  surface_smoothing.md
faq/: index.html
microscopynodes/: blender_manifest.toml
microscopynodes/file_to_array/: zarr.py
outdated/: index.html
overview/: index.html
search/: search_index.json
tutorials/1_start/: index.html
tutorials/2_loading_data/: index.html
tutorials/3_objects/: index.html
tutorials/4_shading/: index.html
tutorials/5_creating_ouput/: index.html
tutorials/large_data/: index.html
tutorials/ome_zarr_troubleshooting/: index.html
tutorials/preferences/: index.html
tutorials/rendering/: index.html
tutorials/surface_smoothing/: index.html
