[tool.poetry]
name = "microscopynodes"
version = "2.2.1"
description = "Loading and handling microscopy data in Blender."
authors = ["Oane Gros <oane.gros@embl.de>"]
include = [
    {path = "README.md"}
]

[tool.poetry.dependencies]
python = "~=3.11.6"
bpy = "==4.4.0"
scipy = "1.15.2"
scikit-image = "0.25.2"
dask = "2025.5.1"
importlib-metadata = "8.7.0"
tifffile = "2025.6.11"
imagecodecs = "2025.3.30"
zarr = "3.0.8"
fsspec = "2025.5.1"
cmap = "0.6.0"
s3fs = "2025.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-snapshot = "*"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]

